plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
}

group = 'by.delfihealth.salov'
version = '0.0.1-SNAPSHOT'

bootJar {
    archiveFileName = 'gluco_reader_test.jar'
}

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // sqlite
    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
    implementation 'org.hibernate.orm:hibernate-community-dialects:6.2.5.Final'
    //web-socket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    //JSON
    implementation 'org.json:json:20230618'

    implementation 'io.github.micheljung:fxstage:0.8.3'
    implementation 'io.github.micheljung:jfx-waitomo-theme:0.3.0'

    implementation 'com.fazecast:jSerialComm:2.9.3'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
